# viewing3d

./: CMakeLists.txt  main.c
struct/: settings.c  settings.h  vertex.c  vertex.h
util/math/: mathUtils.c  mathUtils.h
